# voice-interactive-invoice-generator

./: .gitignore  CREDITS.md  GITHUB_SETUP.md  LICENSE  PROJECT_SUMMARY.txt  QUICK_GUIDE.md  README.md  SYSTEM_SUMMARY.md  VOICE_FIXES_COMPLETE.md  VOICE_IMPROVEMENTS.md  clean_voice_gui.py  create_invoice.py  demo.py  interactive_invoice.py  optimized_voice_invoice.py  requirements.txt  simple_voice_invoice.py  voice_invoice.py  voice_invoice_fixed.py  voice_invoice_gui.py
examples/: basic_example.py  interactive_example.py  quick_example.py
output/: invoice_INV_0001.html  invoice_INV_0002.html  invoice_INV_0003.html  invoice_INV_20251001165551.html  my_invoice_INV_20251002083114.html
src/: __init__.py  ai_agent.py
src/models/: __init__.py  customer.py  invoice.py
src/services/: __init__.py  hsn_validator.py  invoice_generator.py
src/templates/: __init__.py  invoice_template.py
voice_invoice_framework/: QUICKSTART.md  README.md  pyproject.toml  run_voice_invoice.py  setup.py
voice_invoice_framework/voice_invoice/: __init__.py  __main__.py
voice_invoice_framework/voice_invoice/core/: __init__.py  application.py  voice_gui.py
voice_invoice_framework/voice_invoice/gui/: __init__.py  clean_voice_gui.py
voice_invoice_framework/voice_invoice/models/: __init__.py  company.py  invoice.py
voice_invoice_framework/voice_invoice/services/: __init__.py  gst_calculator.py  invoice_generator.py
voice_invoice_framework/voice_invoice/templates/: __init__.py
voice_invoice_framework/voice_invoice/utils/: __init__.py  config_manager.py  voice_manager.py
